tests/error/type_match/base_case_array_mismatched_type.bz
function test()
{
	let _: [4: int32] = [4: int64]();
}
